// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SitemapSection component renders correctly 1`] = `
<div>
  <div
    class="Section-root css-10chrh8"
    data-testid="sitemap-section"
    id="site-map"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          Main
        </h2>
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-root css-1a7a0ef"
          >
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 item css-1x9euu8-MuiTypography-root"
                  data-testid="typography"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 item css-1nuwz6u-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
                        data-testid="sitemap-link"
                        type="button"
                      >
                        <span>
                          +44 (0) 1234567890
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 item css-1x9euu8-MuiTypography-root"
                  data-testid="typography"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 item css-1nuwz6u-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
                        data-testid="sitemap-link"
                        type="button"
                      >
                        <span>
                          Our story
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly 2 levels deep 1`] = `
<div>
  <div
    class="Section-root css-10chrh8"
    data-testid="sitemap-section"
    id="site-map"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          Main
        </h2>
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-root css-1a7a0ef"
          >
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 item css-1x9euu8-MuiTypography-root"
                  data-testid="typography"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 item css-1nuwz6u-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
                        data-testid="sitemap-link"
                        type="button"
                      >
                        <span>
                          +44 (0) 1234567890
                        </span>
                      </a>
                    </h6>
                    <div>
                      <h5
                        class="MuiTypography-root MuiTypography-h5 item css-1lhxn1g-MuiTypography-root"
                        data-testid="typography"
                      >
                        About BMI 2
                      </h5>
                      <div
                        class="SitemapBlock SitemapBlock--child"
                      >
                        <div>
                          <h6
                            class="MuiTypography-root MuiTypography-h6 item css-1nuwz6u-MuiTypography-root"
                            data-testid="typography"
                          >
                            <a
                              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
                              data-testid="sitemap-link"
                              type="button"
                            >
                              <span>
                                Our story
                              </span>
                            </a>
                          </h6>
                          <div>
                            <h6
                              class="MuiTypography-root MuiTypography-h6 item css-1nuwz6u-MuiTypography-root"
                              data-testid="typography"
                            >
                              About BMI 2
                            </h6>
                            <div
                              class="SitemapBlock SitemapBlock--child"
                            >
                              <div>
                                <h6
                                  class="MuiTypography-root MuiTypography-h6 item css-1nuwz6u-MuiTypography-root"
                                  data-testid="typography"
                                >
                                  <a
                                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
                                    data-testid="sitemap-link"
                                    type="button"
                                  >
                                    <span>
                                      Our story
                                    </span>
                                  </a>
                                </h6>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 item css-1x9euu8-MuiTypography-root"
                  data-testid="typography"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 item css-1nuwz6u-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-kan2f7-MuiTypography-root-MuiLink-root"
                        data-testid="sitemap-link"
                        type="button"
                      >
                        <span>
                          Our story
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly if incomplete 1`] = `
<div>
  <div
    class="Section-root css-10chrh8"
    data-testid="sitemap-section"
    id="site-map"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        />
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid-root css-1a7a0ef"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
